# socks-bot

./: .gitmodules  Dockerfile  README.MD  entrypoint.sh  startup.sh
src/board_rebooter/: package.xml  setup.cfg  setup.py
src/board_rebooter/board_rebooter/: board_rebooter.py
src/i2c_service/: CMakeLists.txt  package.xml
src/i2c_service/src/: i2c_service_server.cpp
src/i2c_service/srv/: I2CService.srv
src/socks-bot/: CMakeLists.txt  package.xml
src/socks-bot/description/: socks_bot.urdf  test.urdf
src/socks-bot/launch/: robot_launch.py
src/socks-bot/src/: socksbot_tf2_broadcaster.cpp
src/socks_bot/: CMakeLists.txt  package.xml  socks_bot_hardware.xml
src/socks_bot/bringup/config/: diffbot_controllers.yaml  slam_config.yaml
src/socks_bot/bringup/launch/: robot_launch.py
src/socks_bot/description/: bot.xacro  out.urdf  out1.urdf  socks_bot.urdf  wheel.xacro
src/socks_bot/description/meshes/: base.stl  caster_wheel.stl  cover.stl  raspberry_holder.stl  raspberry_pi_holder.stl  tt_motor.stl  wheel.stl  wheel_holder.stl
src/socks_bot/hardware/: socks_bot_hardware.cpp
src/socks_bot/hardware/include/socks_bot/: socks_bot_hardware.hpp  visibility_control.h
